--- a/PresentationLayer/SignalR.Web/Views/Home/SignIn.cshtml
+++ b/PresentationLayer/SignalR.Web/Views/Home/SignIn.cshtml
@@ -1,23 +1,6 @@
 ﻿@{
     ViewData["Title"] = "SignIn";
 }
-
-<h1>SignIn</h1>
-
-<form action="/Home/SignInRequest" method="post">
-    
-    <br />
-    <label for="UserName">User Name:</label>
-    <input type="text" id="UserName" name="UserName" required>
-    <br />
-  
-    <label for="Password">Password:</label>
-    <input type="text" id="Password" name="Password" required>
-    
-    <br />
-    <button type="submit">Submit</button>
-</form>
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -55,16 +38,16 @@
 									</button>
 								</div>
 								<p>or use your email account:</p>
-								<form>
+								<form action="/Home/SignInRequest" method="post">
 									<div class="form-group">
-										<input type="email" id="inputEmail" class="form-control" placeholder="Email Address" required>
+										<input type="text" id="inputEmail" class="form-control" name="UserName" placeholder="Email Address" required>
 										<button class="btn icon"><i class="material-icons">mail_outline</i></button>
 									</div>
 									<div class="form-group">
-										<input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+										<input type="password" id="inputPassword" class="form-control" name="Password"  placeholder="Password" required>
 										<button class="btn icon"><i class="material-icons">lock_outline</i></button>
 									</div>
-									<button type="submit" class="btn button" formaction="index-2.html">Sign In</button>
+									<button type="submit" class="btn button" >Sign In</button>
 									<div class="callout">
 										<span>Don't have account? <a href="/Home/Sign_Up">Create Account</a></span>
 									</div>
