--- a/PresentationLayer/SignalR.Web/Views/Home/SignIn.cshtml
+++ b/PresentationLayer/SignalR.Web/Views/Home/SignIn.cshtml
@@ -65,7 +65,7 @@
 						<div class="preference">
 							<h2>Hello, Friend!</h2>
 							<p>Enter your personal details and start your journey with Swipe today.</p>
-							<a href="/Home/Sign_Up" class="btn button">Sign Up</a>
+							<a href="/Home/SignUp" class="btn button">Sign Up</a>
 						</div>
 					</div>
 				</div>
