--- a/PresentationLayer/SignalR.Web/Views/Home/Index.cshtml
+++ b/PresentationLayer/SignalR.Web/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ViewModel.HomePageViewModel
 @{
     ViewData["Title"] = "Index";
-    
+    Layout = "_Layout";
 }
 <script src="~/lib/microsoft/signalr/dist/browser/signalr.js"></script>
 <style type="text/css">
