--- a/PresentationLayer/SignalR.Web/Views/Home/SignUp.cshtml
+++ b/PresentationLayer/SignalR.Web/Views/Home/SignUp.cshtml
@@ -28,6 +28,7 @@
 						<div class="col-md-12">
 							<div class="content">
 								<h1>Create Account</h1>
+								<!--
 								<div class="third-party">
 									<button class="btn item bg-blue">
 										<i class="material-icons">pages</i>
@@ -39,6 +40,7 @@
 										<i class="material-icons">whatshot</i>
 									</button>
 								</div>
+								-->
 								<p>or use your email for registration:</p>
 								<form class="signup" action="/Home/SignUpRequest" method="post" >
 									<div class="form-parent">
@@ -68,7 +70,7 @@
 									
 									<button type="submit" class="btn button" >Sign Up</button>
 									<div class="callout">
-										<span>Already a member? <a href="sign-in.html">Sign In</a></span>
+										<span>Already a member? <a href="/Home/SignIn">Sign In</a></span>
 									</div>
 								</form>
 							</div>
