--- a/PresentationLayer/SignalR.Web/Views/Shared/_DashboardLayout.cshtml
+++ b/PresentationLayer/SignalR.Web/Views/Shared/_DashboardLayout.cshtml
@@ -1,5 +1,6 @@
 ﻿<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
 <link rel="stylesheet" href="~/css/site.css" />
+<script src="js/jquery-3.3.1.slim.min.js"></script>
 
 @RenderBody()
         
