--- a/PresentationLayer/SignalR.Web/Views/Home/Dashboard.cshtml
+++ b/PresentationLayer/SignalR.Web/Views/Home/Dashboard.cshtml
@@ -77,7 +77,7 @@
 							<!-- <a href="#notifications" data-toggle="tab" class="f-grow1"><i class="material-icons">notifications_none</i></a> -->
 							<!-- <button class="btn mode"><i class="material-icons">brightness_2</i></button> -->
 							<!-- <a href="#settings" data-toggle="tab"><i class="material-icons">settings</i></a> -->
-							<button class="btn power" onclick="visitPage();"><i class="material-icons">power_settings_new</i></button>
+							<a class="btn power" href="/Home/SignIn"><i class="material-icons">power_settings_new</i></a>
 						</div>
 					</div>
 				</div>
@@ -708,7 +708,7 @@
 										<!-- End of Privacy & Safety -->
 										<!-- Start of Logout -->
 										<div class="category">
-											<a href="sign-in.html" class="title collapsed">
+											<a href="/Home/SignIn" class="title collapsed">
 												<i class="material-icons md-30 online">power_settings_new</i>
 												<div class="data">
 													<h5>Power Off</h5>
