--- a/PresentationLayer/SignalR.Web/Views/Home/SignUp.cshtml
+++ b/PresentationLayer/SignalR.Web/Views/Home/SignUp.cshtml
@@ -86,7 +86,7 @@
 						<div class="preference">
 							<h2>Welcome Back!</h2>
 							<p>To keep connected with your friends please login with your personal info.</p>
-							<a href="sign-in.html" class="btn button">Sign In</a>
+							<a href="/Home/SignIn" class="btn button">Sign In</a>
 						</div>
 					</div>
 				</div>
