--- a/PresentationLayer/SignalR.Web/Views/Home/_Users.cshtml
+++ b/PresentationLayer/SignalR.Web/Views/Home/_Users.cshtml
@@ -25,9 +25,9 @@
 				@if (item.Id != Model.account.Id)
 				{
 
-					<a href="#list-chat" class="filterDiscussions all unread single " id="list-chat-list" data-toggle="list" role="tab" onclick="openChat('@item.Id')">>
+					<a href="#list-chat" class="filterDiscussions all unread single " id="list-chat-list" data-toggle="list" role="tab" onclick="openChat('@item.Id')">
 						<img class="avatar-md" src="/img/avatars/avatar-female-1.jpg" data-toggle="tooltip" data-placement="top" title="Janette" alt="avatar">
-						@if (item.IsActive == 1)
+						@if (item.IsActive == 1 )
 						{
 							<div class="status">
 								<i class="material-icons online">fiber_manual_record</i>
