--- a/PresentationLayer/SignalR.Web/Views/Home/_Chat.cshtml
+++ b/PresentationLayer/SignalR.Web/Views/Home/_Chat.cshtml
@@ -4,8 +4,10 @@
     Layout = "_DashboardLayout";
 }
 <script src="~/lib/microsoft/signalr/dist/browser/signalr.js"></script>
+
 @section scripts{
     <script type="text/javascript">
+
 		function recevedMessage(user,message) {
 			if (@Model.accounts[0].Id == user) {
 				document.getElementById("msgContainer").innerHTML +=
@@ -79,7 +81,38 @@
 	</div>
 	<div class="content" id="content">
 		<div id="msgContainer" class="container">
-			
+			@foreach(var i in Model.listMessages)
+			{
+				if(i.messageSenderId == Model.account.Id)
+				{
+					<div class="message me">
+						<div class="text-main">
+							<div class="text-group me">
+								<div class="text me">
+									<p> @i.messageContent </p>
+								</div>
+								
+							</div>
+							<span>@i.messageDateTime</span>
+						</div>
+					</div>
+				}
+				else
+				{
+					<div class="message">
+						<img class="avatar-md" src="/img/avatars/avatar-female-5.jpg" data-toggle="tooltip" data-placement="top" title="Keith" alt="avatar">
+						<div class="text-main">
+							<div class="text-group">
+								<div class="text">
+									<p> @i.messageContent </p>
+								</div>
+								
+							</div>
+							<span>@i.messageDateTime</span>
+						</div>
+					</div>
+				}
+			}
 		</div>
 	</div>
 	<div class="container">
